Wed Aug  4 02:35:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* configure.in: use build_os variable for checking C and C++ compilers
	matching.

	* configure.in: use clang++ if clang is used.

Thu Aug  4 02:21:10 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (link_command): use static library only for bundled
	  extensions.  [Bug #5147]

Wed Aug  3 00:11:08 2011  Tanaka Akira  <akr@fsij.org>

	* lib/prettyprint.rb: update document.  [ruby-core:36776]


Tue Aug  2 20:10:16 2011  Shota Fukumori  <sorah@tubusu.net>

	* test/testunit/test_parallel.rb: pass "--ruby" option to
	  test/testunit/tests_for_parallel/runner.rb. [Bug #5132] [ruby-dev:44303]
	  Backported from trunk r32812.

Tue Aug  2 12:03:16 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (recursive_hash): hash value of emptied hash should be
	  equal to an empty hash.  [ruby-core:38650]

Tue Aug  2 11:42:15 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_enc_symname2_p): :! is valid symbol.  [Bug #5136]

Tue Aug  2 03:26:02 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/rake/test_rake_directory_task.rb (TestRakeDirectoryTask#
	  test_directory_win32): fixed wrong test.
	  backported r32670 from trunk.

Mon Aug  1 15:45:23 2011  Eric Hodel  <drbrain@segment7.net>

	* test/rake/test_rake_functional.rb:  Don't assume the binary name of
	  ruby is "ruby".  [Ruby 1.9 - Bug #5114]
	* test/rake/helper.rb:  ditto

Mon Aug  1 05:21:42 2011  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>

	* cont.c (cont_save_thread): fix missing semicolon.

Sun Jul 31 22:57:16 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* enc/Makefile.in (ECHO1): Same as the recent fix in common.mk.
	  ":" in a make variable replacement cause a syntax error with
	  /usr/ccs/bin/make on Solaris.  Uses $(NULLCMD) instead.

Sun Jul 31 22:44:08 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* configure.in: fix typos.

Sun Jul 31 21:19:51 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
