@@ -1,3 +1,9 @@
+Fri Aug  5 07:00:31 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* test/io/console/test_io_console.rb (test_noctty): daemon() on
+	  OpenBSD seems not to detach the controlling terminal, when the
+	  argument noclose is non-zero.  ref: [Bug #5135]
+
 Wed Aug  4 02:35:00 2011  Kenta Murata  <mrkn@mrkn.jp>
 
 	* configure.in: use build_os variable for checking C and C++ compilers
